fixed FOUC on mobile nav

--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -5,10 +5,12 @@
   top: 0;
   width: 100%;
   opacity: 0.95;
-  visibility: hidden;
-
+  left: -100%;
+  transition: transform 0.3s ease-out;
   &.show {
     visibility: visible;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-out;
   }
 
   .menu-branding,
@@ -25,7 +27,6 @@
     padding: 0;
     background: darken($mobile-menu-bg, 10);
     list-style: none;
-    transform: translate3d(-100%, 0, 0);
     @include easeOut;
 
     &.show {
@@ -37,7 +38,6 @@
   .menu-branding {
     background: #1a1a1a;
     @include easeOut;
-    transform: translate3d(100%, 0, 0);
     &.show {
       transform: translate3d(0, 0, 0);
     }
